# HW_20.1

./: README.md  catalog.json  pyproject.toml
catalog/: models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py
catalog/templates/: home.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_detail.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py
