[tool.poetry]
name = "hw-20-1"
version = "0.1.0"
description = ""
authors = ["Helen Priluckay"]
readme = "README.md"
packages = [{include = "hw_20"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
